CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
SET(CMAKE_C_STANDARD 11)
PROJECT(BrainFuck C)

ADD_DEFINITIONS(-DBF_VERSION="1.0.0 Version")
ADD_DEFINITIONS(-DBF_VERSION_INFO="first version of BrainFuckPro")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
SET(LIBRARY_OUTPUT_PATH lib)  # 设置输出路径
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH})

SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")  # 设定rpath

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src)
ADD_EXECUTABLE(BrainFuck main.c)
TARGET_LINK_LIBRARIES(BrainFuck BrainFuck_Lib)

INSTALL(TARGETS BrainFuck BrainFuck_Lib)
