CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
SET(CMAKE_C_STANDARD 11)
PROJECT(BrainFuck C)

ADD_DEFINITIONS(-DBF_VERSION="1.1.1 Version")
ADD_DEFINITIONS(-DBF_VERSION_INFO="Support stable operation. It is the basis for future versions.")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/lib)  # 设置输出路
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH})

SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")  # 设定rpath
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src)
ADD_EXECUTABLE(BrainFuck main.c)
TARGET_LINK_LIBRARIES(BrainFuck BrainFuck_Lib)

INSTALL(TARGETS BrainFuck)
