CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
SET(CMAKE_C_STANDARD 11)
PROJECT(BrainFuck_Lib C)

ADD_LIBRARY(BrainFuck_Lib SHARED brainfuck.c)
SET_TARGET_PROPERTIES(BrainFuck_Lib PROPERTIES PUBLIC_HEADER ${CMAKE_SOURCE_DIR}/include/brainfuck.h)
INSTALL(TARGETS BrainFuck_Lib
        PUBLIC_HEADER DESTINATION include)